# meteoscape

./: .cursorignore  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.agents/: README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cicd.md  concerns.md  glossary.md  ideas.md  module-layout.md  parameters.md  product-roadmap.md  provider-authoring.md  v1-requirements.md
docs/.obsidian/: workspace.json
docs/adr/: 0001-manifold-algebra-and-composition.md  0002-data-model.md  0003-provenance-and-origin.md  0004-producer-resolution-and-capability.md  0005-build-time-composition.md  0006-materialization-granularity-and-store-shape.md  0007-capability-carries-its-domain.md  0007-reach-is-an-inner-bound.md
docs/rfc/: 0001-20260716-derived-wind-calculator.md  0002-20260720-provider-nodata-mask.md  0003-20260720-profile-reach.md  0004-20260721-separability-narrowing.md
docs/sessions/: 0001-20260708-clock-cadence-footprint.md  0002-20260708-openmeteo-provider-plan.md  0003-20260709-sourcekey-offering-align.md  0004-20260709-identity-registry-weaver.md  0005-20260710-profiledef-manifest-seam.md  0006-20260711-namespace-polish.md  0007-20260711-phase-a-weave-plan.md  0008-20260711-phase-a-weave.md  0008-20260712-phase-b-value-types-plan.md  0009-20260712-phase-c-spine-plan.md  0010-20260712-phase-c-spine.md  0011-20260713-002-align-z-carriage.md  0012-20260714-002b-align-derived-wind.md  (+6 more)
tests/: fakes.py  test_config.py  test_e2e_forecast.py  test_identity.py  test_packaging.py  test_server.py  test_server_smoke.py
(+135 files in other folders)
