[project]
name = "meteoscape"
version = "0.1.0"
description = "Manifold-based, provenance-stamped weather Coverage-resolution engine, served over MCP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "triyarangi", email = "dveyarangi@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sentry-sdk>=2.63.0",
    "xarray>=2026.4.0",
]

[project.scripts]
meteoscape = "meteoscape:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # import sorting
    "UP",   # modern Python upgrades
    "B",    # likely bugs and design problems
    "SIM",  # simplifications
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501", # line length is handled by the formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
